Replace `String.format` with `.formatted`.