@@ -61,7 +61,7 @@ public class AdprimeBidder implements Bidder<BidRequest> {
                         modifyBidRequest(bidRequest, extImpAdprime, modifyImp(imp, extImpAdprime))));
             } catch (IllegalArgumentException e) {
                 return Result.withError(BidderError.badInput(
-                        String.format("Unable to decode the impression ext for id: '%s'", imp.getId())));
+                        "Unable to decode the impression ext for id: '%s'".formatted(imp.getId())));
             }
         }
 
@@ -177,10 +177,10 @@ public class AdprimeBidder implements Bidder<BidRequest> {
                 if (imp.getXNative() != null) {
                     return BidType.xNative;
                 }
-                throw new PreBidException(String.format("Unknown impression type for ID: '%s'", impId));
+                throw new PreBidException("Unknown impression type for ID: '%s'".formatted(impId));
             }
         }
-        throw new PreBidException(String.format("Failed to find impression for ID: '%s'", impId));
+        throw new PreBidException("Failed to find impression for ID: '%s'".formatted(impId));
     }
 
 }
