@@ -155,6 +155,6 @@ public class MobfoxpbBidder implements Bidder<BidRequest> {
                 }
             }
         }
-        throw new PreBidException(String.format("Failed to find impression \"%s\"", impId));
+        throw new PreBidException("Failed to find impression \"%s\"".formatted(impId));
     }
 }
