@@ -68,8 +68,8 @@ public class VideobyteBidder implements Bidder<BidRequest> {
         try {
             return mapper.mapper().convertValue(imp.getExt(), VIDEOBYTE_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format(
-                    "Ignoring imp id=%s, error while decoding, err: %s", imp.getId(), e.getMessage()));
+            throw new PreBidException(
+                    "Ignoring imp id=%s, error while decoding, err: %s".formatted(imp.getId(), e.getMessage()));
         }
     }
 
