@@ -75,17 +75,17 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
         try {
             extImpYahooSSP = mapper.mapper().convertValue(impExtNode, YAHOOSSP_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(String.format("imp #%s: %s", index, e.getMessage()));
+            throw new PreBidException("imp #%s: %s".formatted(index, e.getMessage()));
         }
 
         final String dcn = extImpYahooSSP.getDcn();
         if (StringUtils.isBlank(dcn)) {
-            throw new PreBidException(String.format("imp #%s: missing param dcn", index));
+            throw new PreBidException("imp #%s: missing param dcn".formatted(index));
         }
 
         final String pos = extImpYahooSSP.getPos();
         if (StringUtils.isBlank(pos)) {
-            throw new PreBidException(String.format("imp #%s: missing param pos", index));
+            throw new PreBidException("imp #%s: missing param pos".formatted(index));
         }
 
         return extImpYahooSSP;
@@ -121,8 +121,7 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
         final boolean hasBannerWidthAndHeight = bannerWidth != null && bannerHeight != null;
 
         if (hasBannerWidthAndHeight && (bannerWidth == 0 || bannerHeight == 0)) {
-            throw new PreBidException(String.format(
-                    "Invalid sizes provided for Banner %sx%s", bannerWidth, bannerHeight));
+            throw new PreBidException("Invalid sizes provided for Banner %sx%s".formatted(bannerWidth, bannerHeight));
         }
     }
 
@@ -217,6 +216,6 @@ public class YahooSSPBidder implements Bidder<BidRequest> {
                 return null;
             }
         }
-        throw new PreBidException(String.format("Unknown ad unit code '%s'", bid.getImpid()));
+        throw new PreBidException("Unknown ad unit code '%s'".formatted(bid.getImpid()));
     }
 }
