@@ -151,11 +151,11 @@ public class AuctionHandler implements Handler<RoutingContext> {
                 metricRequestStatus = MetricName.badinput;
 
                 errorMessages = invalidRequestException.getMessages().stream()
-                        .map(msg -> String.format("Invalid request format: %s", msg))
+                        .map(msg -> "Invalid request format: " + msg)
                         .toList();
                 final String message = String.join("\n", errorMessages);
                 final String referer = routingContext.request().headers().get(HttpUtil.REFERER_HEADER);
-                conditionalLogger.info(String.format("%s, Referer: %s", message, referer), 0.01);
+                conditionalLogger.info("%s, Referer: %s".formatted(message, referer), 0.01);
 
                 status = HttpResponseStatus.BAD_REQUEST;
                 body = message;
@@ -172,7 +172,7 @@ public class AuctionHandler implements Handler<RoutingContext> {
                     || exception instanceof BlacklistedAccountException) {
                 metricRequestStatus = exception instanceof BlacklistedAccountException
                         ? MetricName.blacklisted_account : MetricName.blacklisted_app;
-                final String message = String.format("Blacklisted: %s", exception.getMessage());
+                final String message = "Blacklisted: " + exception.getMessage();
                 logger.debug(message);
 
                 errorMessages = Collections.singletonList(message);
@@ -194,7 +194,7 @@ public class AuctionHandler implements Handler<RoutingContext> {
                 errorMessages = Collections.singletonList(message);
 
                 status = HttpResponseStatus.INTERNAL_SERVER_ERROR;
-                body = String.format("Critical error while running the auction: %s", message);
+                body = "Critical error while running the auction: " + message;
             }
         }
 
